--- a/app/src/main/res/layout/settings_tab_fragment.xml
+++ b/app/src/main/res/layout/settings_tab_fragment.xml
@@ -4,23 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.homeTab.SettingsTabFragment">
-
-    <TextView
-        android:id="@+id/txtFill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fill me up" />
-
-    <Button
-        android:id="@+id/btnGetPrefs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get from prefs" />
-
-    <Button
-        android:id="@+id/btnSet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="btnSetPrefs" />
-</LinearLayout>
+    tools:context=".ui.homeTab.SettingsTabFragment"/>
