--- a/app/src/main/res/layout/input_dialog_activity.xml
+++ b/app/src/main/res/layout/input_dialog_activity.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context=".InputDialogActivity">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +11,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editTextTextMultiLine"
+            android:id="@+id/txtSendData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -20,7 +19,8 @@
             android:gravity="start|top"
             android:inputType="textMultiLine"
             android:lines="4"
-            android:singleLine="false" />
+            android:singleLine="false"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <LinearLayout
             android:layout_width="match_parent"
