Fixed persistent file access with Environment, lots of bug fixing, refactoring

--- a/app/src/main/res/layout/input_dialog_activity.xml
+++ b/app/src/main/res/layout/input_dialog_activity.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
             android:padding="1dp"
-            android:text="QuickAdding to file:  "
+            android:text="quickaddfilename"
             android:textSize="13sp" />
 
         <EditText
