--- a/app/src/main/res/xml/adaptive_icon.xml
+++ b/app/src/main/res/xml/adaptive_icon.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
-    <background android:drawable="@drawable/obscommainicon" />
+    <background android:drawable="@drawable/obscomiconbg" />
     <foreground android:drawable="@drawable/obscommainicon" />
 </adaptive-icon>
