--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,7 +14,9 @@
 
     <item
         android:id="@+id/navigation_zipper"
+        android:enabled="false"
         android:icon="@drawable/icon_file_zip"
-        android:title="Zipper" />
+        android:title="Zipper"
+        android:visible="false" />
 
 </menu>
