--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,14 +1,17 @@
 <resources>
-    <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
-    </string-array>
 
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
-    </string-array>
+
+    <array name="vault_shortcuts">
+        <item>Vault folder</item>
+        <item>Snippets folder</item>
+        <item>.plugins folder</item>
+    </array>
+
+    <array name="vault_shortcuts_values">
+        <item>vaultfolder</item>
+        <item>snippetsfolder</item>
+        <item>pluginsfolder</item>
+    </array>
 
 
 
